@@ -50,7 +50,7 @@ class feed:
     __url = ''
     __feed = {}
 
-    def __init__(self, server, uname, password, ssl, mbox):
+    def __init__(self, server, uname, password, ssl, h, mbox):
         """Constructor
 
         @type server: string
@@ -61,6 +61,8 @@ class feed:
         @param password: password
         @type ssl: bool
         @param ssl: dummy variable for compatibility
+        @type h: int
+        @param h: dummy variable
         @type mbox: string
         @param mbox: Gmail label
         """
